--- a/src/screens/EstablishmentScreen/establishmentScreen.module.scss
+++ b/src/screens/EstablishmentScreen/establishmentScreen.module.scss
@@ -1,379 +1,379 @@
 .underHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 32px 0 64px 0;
-
-  &_breadcrump {
-  }
-  &_groupButtons {
-    @extend %Text14;
-    display: flex;
-    align-items: center;
-    gap: $gap;
-    &_button {
-      background-color: $color-additional-background;
-      border-radius: $border-radius-10;
-      padding: 10px;
-      border: 1px solid $color-additional-background;
-      &:hover {
-        border-color: $color-main-gold;
-        color: $color-main-gold;
-      }
-      &_active {
-        border-color: $color-main-blue;
-        color: $color-main-blue;
-      }
-    }
-    &_icon {
-      font-size: 18px;
-    }
-  }
-}
-.titleBlock {
-  display: flex;
-  justify-content: space-between;
-  &_ctn {
-  }
-
-  &_left {
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    gap: $gap-small;
-  }
-  &_right {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 32px;
-  }
-  &_title {
-    display: flex;
-    gap: $gap-medium;
-    & h1 {
-      @extend %Title;
-    }
-  }
-  &_class {
-    width: fit-content;
-    border-radius: $border-radius-20;
-    &_icon {
-      margin-bottom: 2px;
-      font-size: 16px;
-    }
-  }
-  &_register {
-    display: flex;
-    @extend %Text14;
-    align-items: center;
-  }
-  &_iconCheck {
-    font-size: 18px;
-    color: $color-main-blue;
-    margin-right: 4px;
-  }
-
-  &_type {
-  }
-  &_rating {
-  }
-  &_price {
-  }
-  &_location {
-  }
-}
-.navBar {
-  & &_list {
-    margin: 48px 0;
-    display: flex;
-    gap: 48px;
-    &_item {
-      @extend %Text18;
-      position: relative;
-      transition: $transiton;
-      cursor: pointer;
-      text-decoration: underline;
-      text-underline-offset: 8px;
-
-      // padding-bottom: 10px;
-      // &::before {
-      //   content: "";
-      //   height: 1.5px;
-      //   background-color: $color-main-black;
-      //   position: absolute;
-      //   top: calc(100% + 5px);
-      //   width: 100%;
-      // }
-      &:hover {
-        color: $color-main-gold;
-      }
-    }
-  }
-}
-.info {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: $gap-small;
-  .info_column {
-    display: flex;
-    flex-direction: column;
-    gap: $gap-small;
-    padding: 32px;
-    border-radius: $border-radius-20;
-    background-color: $color-additional-background;
-    min-height: 470px;
-    & h4 {
-      margin-bottom: 16px;
-    }
-  }
-  .info_column:nth-child(1) {
-  }
-  .info_column:nth-child(2) {
-  }
-  .info_column:nth-child(3) {
-    display: grid;
-
-    gap: 32px;
-  }
-
-  .info_rating {
-  }
-  .info_rating_main {
-    display: flex;
-    align-items: center;
-    gap: $gap-small;
-    margin-bottom: 32px;
-    &_score {
-      display: flex;
-      flex-direction: column;
-      gap: $gap-small;
-    }
-    &_score span {
-    }
-    &_scrore h2 {
-      color: rgba(15, 17, 17, 1);
-    }
-  }
-  & .info_rating_list {
-    display: flex;
-    flex-direction: column;
-    gap: $gap-small;
-    padding-bottom: 16px;
-    border-bottom: 1px solid rgba(217, 217, 217, 1);
-    margin-bottom: 16px;
-    &_item {
-      display: flex;
-      justify-content: space-between;
-      color: rgba(15, 17, 17, 1);
-      @extend %Text14;
-      & span {
-      }
-      &_score {
-        display: flex;
-        gap: $gap-small;
-      }
-    }
-  }
-  .info_class {
-    @extend %Text18;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  & .info_queryList {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: $gap-small;
-    flex-wrap: wrap;
-    &_item {
-      display: flex;
-
-      align-items: center;
-      // border: 1px solid $color-main-grey;
-      // padding: 5px 3px;
-      // background-color: $color-main-background;
-    }
-  }
-  .info_address {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    &_location,
-    &_phone {
-      display: flex;
-      align-items: center;
-      transition: $transiton;
-      cursor: pointer;
-      &:hover {
-        color: $color-main-gold;
-      }
-    }
-  }
-  .info_map {
-    height: 100%;
-    &_image {
-      width: 100%;
-      height: 100%;
-      border-radius: $border-radius-20;
-      object-fit: cover;
-    }
-  }
-  .button_estimate {
-    width: fit-content;
-    margin-top: auto;
-    &:hover .info_icon_message {
-      color: $color-main-gold;
-    }
-  }
-
-  .info_icon_message {
-    font-size: 16px;
-    transition: $transiton;
-  }
-  .info_icon_location {
-    font-size: 18px;
-    margin-right: 8px;
-  }
-  .info_icon_phone {
-    font-size: 16px;
-    margin-right: 8px;
-  }
-  .info_icon_query {
-    margin-right: 5px;
-  }
-}
-.slider_block {
-  &_title {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
-    &_button {
-      @extend %Text14;
+    margin: 32px 0 64px 0;
 
-      padding: 11.5px 16px;
-
-      border: 1px solid $color-main-grey;
-      border-radius: $border-radius-small;
-      transition: $transiton;
-      cursor: pointer;
-      &:hover {
-        border-color: $color-main-gold;
-      }
-      h2 {
-      }
+    &_breadcrump {
     }
-  }
-}
-.reviews {
-  display: flex;
-  flex-direction: column;
-  gap: $gap-big;
-  & h2 {
-  }
-  &_block {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: $gap-big;
-    position: relative;
-  }
-  &_stat {
-    max-height: calc(100vh - $header-height);
-    height: fit-content;
-    position: sticky;
-    top: $header-height;
-    padding: 30px 15px;
-    border-radius: $border-radius-10;
-    background-color: $color-additional-background;
-    display: flex;
-    flex-direction: column;
-    gap: $gap-big;
-    &_title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: $gap-small;
-    }
-    &_transcriptList {
-      &_item {
+    &_groupButtons {
+        @extend %Text14;
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        gap: $gap-small;
-      }
-    }
-    &_additionalList {
-      &_item {
-        display: flex;
-        justify-content: space-between;
-        gap: $gap-small;
-        &_score {
-          display: flex;
-          gap: $gap-small;
+        gap: $gap;
+        &_button {
+            background-color: $color-additional-background;
+            border-radius: $border-radius-10;
+            padding: 10px;
+            border: 1px solid $color-additional-background;
+            &:hover {
+                border-color: $color-main-gold;
+                color: $color-main-gold;
+            }
+            &_active {
+                border-color: $color-main-blue;
+                color: $color-main-blue;
+            }
         }
-      }
+        &_icon {
+            font-size: 18px;
+        }
     }
-  }
-  &_list {
-    overflow: auto;
-  }
 }
-.offer {
-  &_ctn {
-    padding: 30px;
-    background-color: $color-additional-background;
-    border-radius: $border-radius-20;
-    display: flex;
-    flex-direction: column;
-    gap: $gap-big;
-  }
-  &_description {
-    @extend %Text14;
-  }
-  &_button {
-    width: fit-content;
-  }
-}
-@include mediaTablet {
-  .underHeader {
+.titleBlock {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 32px;
-    margin: 32px 0;
-  }
-  .titleBlock {
+    &_ctn {
+    }
+
+    &_left {
+        display: flex;
+        flex-direction: column;
+        // align-items: center;
+        gap: $gap-small;
+    }
+    &_right {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 32px;
+    }
+    &_title {
+        display: flex;
+        gap: $gap-medium;
+        & h1 {
+            @extend %Title;
+        }
+    }
+    &_class {
+        width: fit-content;
+        border-radius: $border-radius-20;
+        &_icon {
+            margin-bottom: 2px;
+            font-size: 16px;
+        }
+    }
+    &_register {
+        display: flex;
+        @extend %Text14;
+        align-items: center;
+    }
+    &_iconCheck {
+        font-size: 18px;
+        color: $color-main-blue;
+        margin-right: 4px;
+    }
+
+    &_type {
+    }
+    &_rating {
+    }
+    &_price {
+    }
+    &_location {
+    }
+}
+.navBar {
+    & &_list {
+        margin: 48px 0;
+        display: flex;
+        gap: 48px;
+        &_item {
+            @extend %Text18;
+            position: relative;
+            transition: $transition;
+            cursor: pointer;
+            text-decoration: underline;
+            text-underline-offset: 8px;
+
+            // padding-bottom: 10px;
+            // &::before {
+            //   content: "";
+            //   height: 1.5px;
+            //   background-color: $color-main-black;
+            //   position: absolute;
+            //   top: calc(100% + 5px);
+            //   width: 100%;
+            // }
+            &:hover {
+                color: $color-main-gold;
+            }
+        }
+    }
+}
+.info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: $gap-small;
+    .info_column {
+        display: flex;
+        flex-direction: column;
+        gap: $gap-small;
+        padding: 32px;
+        border-radius: $border-radius-20;
+        background-color: $color-additional-background;
+        min-height: 470px;
+        & h4 {
+            margin-bottom: 16px;
+        }
+    }
+    .info_column:nth-child(1) {
+    }
+    .info_column:nth-child(2) {
+    }
+    .info_column:nth-child(3) {
+        display: grid;
+
+        gap: 32px;
+    }
+
+    .info_rating {
+    }
+    .info_rating_main {
+        display: flex;
+        align-items: center;
+        gap: $gap-small;
+        margin-bottom: 32px;
+        &_score {
+            display: flex;
+            flex-direction: column;
+            gap: $gap-small;
+        }
+        &_score span {
+        }
+        &_scrore h2 {
+            color: rgba(15, 17, 17, 1);
+        }
+    }
+    & .info_rating_list {
+        display: flex;
+        flex-direction: column;
+        gap: $gap-small;
+        padding-bottom: 16px;
+        border-bottom: 1px solid rgba(217, 217, 217, 1);
+        margin-bottom: 16px;
+        &_item {
+            display: flex;
+            justify-content: space-between;
+            color: rgba(15, 17, 17, 1);
+            @extend %Text14;
+            & span {
+            }
+            &_score {
+                display: flex;
+                gap: $gap-small;
+            }
+        }
+    }
+    .info_class {
+        @extend %Text18;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    & .info_queryList {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: $gap-small;
+        flex-wrap: wrap;
+        &_item {
+            display: flex;
+
+            align-items: center;
+            // border: 1px solid $color-main-grey;
+            // padding: 5px 3px;
+            // background-color: $color-main-background;
+        }
+    }
+    .info_address {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        &_location,
+        &_phone {
+            display: flex;
+            align-items: center;
+            transition: $transition;
+            cursor: pointer;
+            &:hover {
+                color: $color-main-gold;
+            }
+        }
+    }
+    .info_map {
+        height: 100%;
+        &_image {
+            width: 100%;
+            height: 100%;
+            border-radius: $border-radius-20;
+            object-fit: cover;
+        }
+    }
+    .button_estimate {
+        width: fit-content;
+        margin-top: auto;
+        &:hover .info_icon_message {
+            color: $color-main-gold;
+        }
+    }
+
+    .info_icon_message {
+        font-size: 16px;
+        transition: $transition;
+    }
+    .info_icon_location {
+        font-size: 18px;
+        margin-right: 8px;
+    }
+    .info_icon_phone {
+        font-size: 16px;
+        margin-right: 8px;
+    }
+    .info_icon_query {
+        margin-right: 5px;
+    }
+}
+.slider_block {
+    &_title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+        &_button {
+            @extend %Text14;
+
+            padding: 11.5px 16px;
+
+            border: 1px solid $color-main-grey;
+            border-radius: $border-radius-small;
+            transition: $transition;
+            cursor: pointer;
+            &:hover {
+                border-color: $color-main-gold;
+            }
+            h2 {
+            }
+        }
+    }
+}
+.reviews {
+    display: flex;
     flex-direction: column;
     gap: $gap-big;
-    &_right {
-      gap: $gap-medium;
+    & h2 {
     }
-  }
-  .navBar {
-    & &_list {
-      flex-wrap: wrap;
-      gap: $gap-medium;
+    &_block {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: $gap-big;
+        position: relative;
     }
-  }
-  .info {
-    grid-template-columns: 1fr;
-    .info_column {
-      min-height: auto;
+    &_stat {
+        max-height: calc(100vh - $header-height);
+        height: fit-content;
+        position: sticky;
+        top: $header-height;
+        padding: 30px 15px;
+        border-radius: $border-radius-10;
+        background-color: $color-additional-background;
+        display: flex;
+        flex-direction: column;
+        gap: $gap-big;
+        &_title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: $gap-small;
+        }
+        &_transcriptList {
+            &_item {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                gap: $gap-small;
+            }
+        }
+        &_additionalList {
+            &_item {
+                display: flex;
+                justify-content: space-between;
+                gap: $gap-small;
+                &_score {
+                    display: flex;
+                    gap: $gap-small;
+                }
+            }
+        }
     }
-    .button_estimate {
-      margin-top: 50px;
+    &_list {
+        overflow: auto;
     }
-  }
+}
+.offer {
+    &_ctn {
+        padding: 30px;
+        background-color: $color-additional-background;
+        border-radius: $border-radius-20;
+        display: flex;
+        flex-direction: column;
+        gap: $gap-big;
+    }
+    &_description {
+        @extend %Text14;
+    }
+    &_button {
+        width: fit-content;
+    }
+}
+@include mediaTablet {
+    .underHeader {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        gap: 32px;
+        margin: 32px 0;
+    }
+    .titleBlock {
+        flex-direction: column;
+        gap: $gap-big;
+        &_right {
+            gap: $gap-medium;
+        }
+    }
+    .navBar {
+        & &_list {
+            flex-wrap: wrap;
+            gap: $gap-medium;
+        }
+    }
+    .info {
+        grid-template-columns: 1fr;
+        .info_column {
+            min-height: auto;
+        }
+        .button_estimate {
+            margin-top: 50px;
+        }
+    }
 }
 @include mediaPhone {
-  .info {
-    .info_column {
-      padding: 24px;
+    .info {
+        .info_column {
+            padding: 24px;
+        }
+        .button_estimate {
+            margin-top: 20px;
+        }
     }
-    .button_estimate {
-      margin-top: 20px;
-    }
-  }
 }
