--- a/src/screens/LocationScreen/_components/Tiles/tiles.module.scss
+++ b/src/screens/LocationScreen/_components/Tiles/tiles.module.scss
@@ -13,7 +13,7 @@
         padding: 8px 10px;
         border-radius: $border-radius-5;
         border: 1px solid $color-main-grey;
-        transition: $transiton;
+        transition: $transition;
         &:hover {
             border-color: $color-main-gold;
             border-radius: $border-radius-10;
