--- a/src/asset/common-styles/mixins.scss
+++ b/src/asset/common-styles/mixins.scss
@@ -1,46 +1,46 @@
 @import "./variables.scss";
 @mixin minmaxHeight($min, $max) {
-  min-height: $min;
-  max-height: $max;
+    min-height: $min;
+    max-height: $max;
 }
-@mixin underline ($color) {
-  &::before {
-    content: "";
-    position: absolute;
-    top: calc(100% + 2px);
-    left: 0;
-    height: 2px;
-    min-width: 0px;
-    transition: $transiton;
-    background-color: $color;
-  }
-  &:hover::before {
-    min-width: 100%;
-  }
+@mixin underline($color) {
+    &::before {
+        content: "";
+        position: absolute;
+        top: calc(100% + 2px);
+        left: 0;
+        height: 2px;
+        min-width: 0px;
+        transition: $transition;
+        background-color: $color;
+    }
+    &:hover::before {
+        min-width: 100%;
+    }
 }
 @mixin textCut($num) {
-  display: -webkit-box;
-  -webkit-line-clamp: $num;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: $num;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 @mixin mediaNetbook() {
-  @media screen and (max-width: $media-netbook) {
-    @content;
-  }
+    @media screen and (max-width: $media-netbook) {
+        @content;
+    }
 }
 @mixin mediaTablet() {
-  @media screen and (max-width: $media-tablet) {
-    @content;
-  }
+    @media screen and (max-width: $media-tablet) {
+        @content;
+    }
 }
 @mixin mediaPhone() {
-  @media screen and (max-width: $media-phone) {
-    @content;
-  }
+    @media screen and (max-width: $media-phone) {
+        @content;
+    }
 }
 @mixin mediaMiniPhone() {
-  @media screen and (max-width: $media-mini-phone) {
-    @content;
-  }
+    @media screen and (max-width: $media-mini-phone) {
+        @content;
+    }
 }
