--- a/src/asset/common-styles/variables.scss
+++ b/src/asset/common-styles/variables.scss
@@ -13,17 +13,17 @@ $color-blur-black: rgb(79 79 79 / 50%);
 $color-main-blue_hover: #237fc6;
 
 $color-gradient-bg-banner: linear-gradient(
-    0deg,
-    rgba(20, 17, 85, 0.12),
-    rgba(20, 17, 85, 0.12)
-  ),
-  linear-gradient(180deg, rgba(48, 45, 129, 0) 0%, rgba(6, 4, 53, 0.2) 100%);
+        0deg,
+        rgba(20, 17, 85, 0.12),
+        rgba(20, 17, 85, 0.12)
+    ),
+    linear-gradient(180deg, rgba(48, 45, 129, 0) 0%, rgba(6, 4, 53, 0.2) 100%);
 $color-gradient-bg-card: linear-gradient(
-    0deg,
-    rgba(20, 17, 85, 0.12),
-    rgba(20, 17, 85, 0.12) 0%
-  ),
-  linear-gradient(180deg, rgba(48, 45, 129, 0), rgba(6, 4, 53, 0.6) 100%);
+        0deg,
+        rgba(20, 17, 85, 0.12),
+        rgba(20, 17, 85, 0.12) 0%
+    ),
+    linear-gradient(180deg, rgba(48, 45, 129, 0), rgba(6, 4, 53, 0.6) 100%);
 
 // соц сети цвета
 $social-classmates-color: #ee8208; // Одноклассники
@@ -52,7 +52,7 @@ $media-tablet: 1024px;
 $media-phone: 768px;
 $media-mini-phone: 350px;
 
-$transiton: all 0.3s;
+$transition: all 0.3s;
 
 $box-shadow-default: 1px 1px 6px 2px $color-main-blue_hover;
 $box-shadow-black: 0px 0px 3px 1px $color-main-black;
