--- a/src/components/UI/Input/InputForm/inputForm.module.scss
+++ b/src/components/UI/Input/InputForm/inputForm.module.scss
@@ -1,44 +1,43 @@
 @import "/src/asset/common-styles/";
 .ctn_input {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: $gap;
-  position: relative;
-  &_title {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    flex-direction: column;
+    gap: $gap;
+    position: relative;
+    &_title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-  &_input {
-  
-  }
+    &_input {
+    }
 }
 .input {
-  width: 100%;
-  background-color: $color-main-white;
-  color: $color-main-black;
-  padding: 12px 16px;
-  border-radius: 8px;
-  border: 1px solid $color-main-grey;
-  transition: $transiton;
-  &:focus,
-  &:focus-visible,
-  &:active,
-  &:hover {
-    border-color: $color-main-gold;
-  }
-  @extend %Text14;
-  &_name {
-  }
-  &_additional {
-    color: $color-main-grey;
-  }
-  &_error {
+    width: 100%;
+    background-color: $color-main-white;
+    color: $color-main-black;
+    padding: 12px 16px;
+    border-radius: 8px;
+    border: 1px solid $color-main-grey;
+    transition: $transition;
+    &:focus,
+    &:focus-visible,
+    &:active,
+    &:hover {
+        border-color: $color-main-gold;
+    }
     @extend %Text14;
-    position: absolute;
-    top: 100%;
-    color: red;
-  }
+    &_name {
+    }
+    &_additional {
+        color: $color-main-grey;
+    }
+    &_error {
+        @extend %Text14;
+        position: absolute;
+        top: 100%;
+        color: red;
+    }
 }
