--- a/src/components/UI/ModalCustom/modalCustom.module.scss
+++ b/src/components/UI/ModalCustom/modalCustom.module.scss
@@ -1,80 +1,80 @@
 .modal {
-  display: flex;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 11;
-  pointer-events: none;
-  &_content {
     display: flex;
-    flex-direction: column;
-    margin: auto auto;
-    height: 50vh;
-    width: 80vw;
-    border-radius: 10px;
 
-    background-color: $color-main-background;
-    transition: $transiton;
-    transform: scale(0);
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 11;
+    pointer-events: none;
+    &_content {
+        display: flex;
+        flex-direction: column;
+        margin: auto auto;
+        height: 50vh;
+        width: 80vw;
+        border-radius: 10px;
 
-    &_title {
-      padding: 20px 20px 0 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+        background-color: $color-main-background;
+        transition: $transition;
+        transform: scale(0);
+        position: relative;
+
+        &_title {
+            padding: 20px 20px 0 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &_children {
+            position: relative;
+            padding: 10px 20px 20px 20px;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            overflow: auto;
+        }
     }
-    &_children {
-      position: relative;
-      padding: 10px 20px 20px 20px;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      overflow: auto;
-    }
-  }
 
-  &_close {
-    // position: absolute;
-    // right: 20px;
-    // top: 20px;
-  }
+    &_close {
+        // position: absolute;
+        // right: 20px;
+        // top: 20px;
+    }
 }
 .modal_active > .modal_content {
-  pointer-events: all;
-  transform: scale(1);
+    pointer-events: all;
+    transform: scale(1);
 }
 .modal_active {
-  display: flex;
-  // transform: scale(1);
+    display: flex;
+    // transform: scale(1);
 }
 .view_content {
-  &_over {
-    height: 99vh;
-    width: 99vw;
-  }
-  &_big {
-    height: 90vh;
-    width: 90vw;
-  }
-  &_middle {
-    height: 80vh;
-    width: 80vw;
-  }
-  &_small {
-    height: 50vh;
-    width: 80vw;
-  }
+    &_over {
+        height: 99vh;
+        width: 99vw;
+    }
+    &_big {
+        height: 90vh;
+        width: 90vw;
+    }
+    &_middle {
+        height: 80vh;
+        width: 80vw;
+    }
+    &_small {
+        height: 50vh;
+        width: 80vw;
+    }
 }
 @include mediaTablet {
-  .view_content_small {
-    width: 100vw;
-    height: 90vh;
-    margin-bottom: 0;
-    border-radius: 10px 10px 0 0;
-  }
+    .view_content_small {
+        width: 100vw;
+        height: 90vh;
+        margin-bottom: 0;
+        border-radius: 10px 10px 0 0;
+    }
 }
