--- a/src/components/common/Cards/CardSearch/cardSearch.module.scss
+++ b/src/components/common/Cards/CardSearch/cardSearch.module.scss
@@ -1,29 +1,33 @@
-@import "/src/asset/common-styles/";
 .card {
-  display: flex;
-  gap: 10px;
-  max-height: 72px;
-  
-  &_img {
-    & img{
-      width: 100%;
-      height: 100%;
-      max-width: 56px;
-      max-height: 56px;
-      object-fit: cover;
-      border-radius:$border-radius-5 ;
-    }
-  }
-  &_info {
     display: flex;
-    flex-direction: column;
+    gap: 10px;
+    max-height: 72px;
 
-    &_title {
-      @extend %Text18;
+    &_img {
+        width: 66px;
+        height: 50px;
+        & img {
+            width: 100%;
+            height: 100%;
+            // max-width: 56px;
+            // max-height: 56px;
+            object-fit: cover;
+            border-radius: $border-radius-5;
+        }
     }
-    &_location {
-      @extend %Text12;
+    &_info {
+        display: flex;
+        flex-direction: column;
+
+        &_title {
+            @extend %Text18;
+        }
+        &_location {
+            @extend %Text12;
+            transition: $transition;
+            &:hover{
+              color: $color-main-blue;
+            }
+        }
     }
-  }
- 
 }
