--- a/src/components/common/Gallery/gallery.module.scss
+++ b/src/components/common/Gallery/gallery.module.scss
@@ -1,128 +1,128 @@
 .skeleton {
-  height: 472px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: $gap-small;
+    height: 472px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: $gap-small;
 
-  &_slide {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  &_slide:first-child {
-    grid-area: 1 / 1 / 3 / 3;
-  }
-  &_image {
-    width: 100%;
-    height: 100%;
-  }
-  &_button {
-    width: 100%;
-  }
+    &_slide {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    &_slide:first-child {
+        grid-area: 1 / 1 / 3 / 3;
+    }
+    &_image {
+        width: 100%;
+        height: 100%;
+    }
+    &_button {
+        width: 100%;
+    }
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 232px 232px;
-  gap: $gap-small;
-  position: relative;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 232px 232px;
+    gap: $gap-small;
+    position: relative;
 }
 .image__main,
 .image__additional {
-  border-radius: $border-radius-20;
-  overflow: hidden;
-  cursor: pointer;
-  & img {
-    width: 100%;
-    height: 100%;
-    transform: scale(1.1);
-    object-fit: cover;
-    transition: $transiton;
-  }
-  &:hover img {
-    transform: scale(1);
-  }
+    border-radius: $border-radius-20;
+    overflow: hidden;
+    cursor: pointer;
+    & img {
+        width: 100%;
+        height: 100%;
+        transform: scale(1.1);
+        object-fit: cover;
+        transition: $transition;
+    }
+    &:hover img {
+        transform: scale(1);
+    }
 }
 .image__main {
-  grid-area: 1 / 1 / 3 / 3;
+    grid-area: 1 / 1 / 3 / 3;
 }
 .image__additional {
 }
 .album {
-  &_grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-  }
-  &_item {
-    border-radius: $border-radius-5;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transition: $transiton;
-    cursor: pointer;
-
-    &:hover {
-      transform: scale(1.02);
-      box-shadow: $box-shadow-default;
+    &_grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
     }
-  }
-  &_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+    &_item {
+        border-radius: $border-radius-5;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        transition: $transition;
+        cursor: pointer;
+
+        &:hover {
+            transform: scale(1.02);
+            box-shadow: $box-shadow-default;
+        }
+    }
+    &_img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 .button_watchAll {
-  @extend %Text12;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 10px;
-  padding: 5px;
-  z-index: 1;
+    @extend %Text12;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 10px;
+    padding: 5px;
+    z-index: 1;
 }
 @include mediaTablet {
-  .image__additional {
-    grid-column: 3/5;
-  }
-  .skeleton {
-    grid-template-columns: repeat(2, 1fr);
-    &_slide:first-child {
-      grid-area: 1 / 1 / 3 / 2;
+    .image__additional {
+        grid-column: 3/5;
     }
-    &_slide:nth-child(4),
-    &_slide:nth-child(5) {
-      display: none;
+    .skeleton {
+        grid-template-columns: repeat(2, 1fr);
+        &_slide:first-child {
+            grid-area: 1 / 1 / 3 / 2;
+        }
+        &_slide:nth-child(4),
+        &_slide:nth-child(5) {
+            display: none;
+        }
     }
-  }
 }
 @include mediaPhone {
-  .gallery {
-    display: block;
-    position: relative;
-  }
-  .image__additional {
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 16 / 9;
-    & img {
-      transform: scale(1);
+    .gallery {
+        display: block;
+        position: relative;
     }
-  }
-  .skeleton {
-    height: 264px;
-    grid-template-columns: 1fr 100px;
-    grid-template-rows: 1fr;
-    &_slide:first-child {
-      grid-area: 1 / 1 / 2 / 2;
+    .image__additional {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 16 / 9;
+        & img {
+            transform: scale(1);
+        }
     }
+    .skeleton {
+        height: 264px;
+        grid-template-columns: 1fr 100px;
+        grid-template-rows: 1fr;
+        &_slide:first-child {
+            grid-area: 1 / 1 / 2 / 2;
+        }
 
-    &_slide:nth-child(3) {
-      display: none;
+        &_slide:nth-child(3) {
+            display: none;
+        }
     }
-  }
 }
