--- a/src/components/common/Header/Burger/burger.module.scss
+++ b/src/components/common/Header/Burger/burger.module.scss
@@ -1,119 +1,119 @@
 @import "/src/asset/common-styles/";
 .ctn_burger {
-  display: none;
-  align-items: center;
-  gap: $gap;
-  cursor: pointer;
+    display: none;
+    align-items: center;
+    gap: $gap;
+    cursor: pointer;
 
-  padding: 0 16px;
-  border: 1px solid $color-main-grey;
-  border-radius: $border-radius-small;
-  height: 44px;
+    padding: 0 16px;
+    border: 1px solid $color-main-grey;
+    border-radius: $border-radius-small;
+    height: 44px;
 }
 .burger {
-  display: flex;
-  align-items: center;
-  position: relative;
-  width: 20px;
-  height: 2px;
-  background-color: $color-main-black;
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 20px;
+    height: 2px;
+    background-color: $color-main-black;
 
-  &::after {
-    content: "";
-    background-color: $color-main-black;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    top: -7px;
-    left: 0;
-    // transform: translate(0, 4px);
-    transition: $transiton;
-  }
-  &::before {
-    content: "";
-    background-color: $color-main-black;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: -7px;
-    left: 0;
-    transition: $transiton;
-  }
+    &::after {
+        content: "";
+        background-color: $color-main-black;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: -7px;
+        left: 0;
+        // transform: translate(0, 4px);
+        transition: $transition;
+    }
+    &::before {
+        content: "";
+        background-color: $color-main-black;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: -7px;
+        left: 0;
+        transition: $transition;
+    }
 }
 
 .block {
-  display: none;
-  transform: translate(-100%, 0);
-  height: calc(100vh);
-  transition: $transiton;
-  position: fixed;
-  top: 0px;
-  left: 0;
-  padding: 48px 48px 24px 24px;
-  border-radius: 0 10px 10px 0;
-  &_menu {
-    position: relative;
-  }
-  &_close_btn {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
+    display: none;
+    transform: translate(-100%, 0);
+    height: calc(100vh);
+    transition: $transition;
+    position: fixed;
+    top: 0px;
+    left: 0;
+    padding: 48px 48px 24px 24px;
+    border-radius: 0 10px 10px 0;
+    &_menu {
+        position: relative;
+    }
+    &_close_btn {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+    }
 }
 .menu {
-  &list {
-  }
-  &_item {
-    padding: 20px 0;
-    &:first-child {
-      display: flex;
-      flex-wrap: wrap;
-      gap: $gap;
-      border-bottom: 1px solid $color-main-black;
+    &list {
     }
-    // navigation
-    & menu {
-      flex-direction: column;
-      align-items: start;
+    &_item {
+        padding: 20px 0;
+        &:first-child {
+            display: flex;
+            flex-wrap: wrap;
+            gap: $gap;
+            border-bottom: 1px solid $color-main-black;
+        }
+        // navigation
+        & menu {
+            flex-direction: column;
+            align-items: start;
+        }
+        & li {
+            width: 100%;
+        }
     }
-    & li {
-      width: 100%;
-    }
-  }
 }
 .ctn_burger[active-target="true"] {
-  & .burger {
-    background-color: transparent;
-    &::after {
-      transform: rotate(45deg) ;
-      top: 0;
+    & .burger {
+        background-color: transparent;
+        &::after {
+            transform: rotate(45deg);
+            top: 0;
+        }
+        &::before {
+            transform: rotate(-45deg);
+            bottom: 0;
+        }
     }
-    &::before {
-      transform: rotate(-45deg) ;
-      bottom: 0;
-    }
-  }
 }
 .block[active-target="true"] {
-  z-index: 10;
-  //   display: block;
-  transform: translate(0, 0);
-  background-color: $color-main-background;
+    z-index: 10;
+    //   display: block;
+    transform: translate(0, 0);
+    background-color: $color-main-background;
 }
 @media screen and (max-width: $media-tablet) {
-  .ctn_burger {
-    display: flex;
-  }
-  .block {
-    display: block;
-  }
+    .ctn_burger {
+        display: flex;
+    }
+    .block {
+        display: block;
+    }
 }
 @media screen and (max-width: $media-phone) {
-  .block {
-    // padding: 0;
-    right: 0;
-  }
-  .ctn_burger span {
-    display: none;
-  }
+    .block {
+        // padding: 0;
+        right: 0;
+    }
+    .ctn_burger span {
+        display: none;
+    }
 }
