--- a/src/components/common/Overlay/overlay.module.scss
+++ b/src/components/common/Overlay/overlay.module.scss
@@ -1,17 +1,17 @@
 @import "/src/asset/common-styles/";
 .overlay {
-  opacity: 0;
-  background-color: $color-overlay;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  z-index: 9;
-  pointer-events: none;
-  transition: $transiton;
-  &[active-target="true"] {
-    opacity: 1;
-    pointer-events: all;
-  }
+    opacity: 0;
+    background-color: $color-overlay;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9;
+    pointer-events: none;
+    transition: $transition;
+    &[active-target="true"] {
+        opacity: 1;
+        pointer-events: all;
+    }
 }
