--- a/src/components/common/Popup/PopupMap/popupMap.module.scss
+++ b/src/components/common/Popup/PopupMap/popupMap.module.scss
@@ -1,71 +1,71 @@
 .popup {
-  &_map {
-  }
-  &_content {
-    background-color: $color-additional-background;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    bottom: 0;
-    width: 70vw;
-    z-index: 10;
-    transition: $transiton;
-  }
+    &_map {
+    }
+    &_content {
+        background-color: $color-additional-background;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        bottom: 0;
+        width: 70vw;
+        z-index: 10;
+        transition: $transition;
+    }
 }
 .active {
-  left: 0;
+    left: 0;
 }
 .image_ctn {
-  display: flex;
-  position: relative;
-  width: 100%;
-  &_image {
-    height: 100%;
+    display: flex;
+    position: relative;
     width: 100%;
-    border-radius: $border-radius-10;
-  }
+    &_image {
+        height: 100%;
+        width: 100%;
+        border-radius: $border-radius-10;
+    }
 }
 .button {
-  &_ctn {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(49, 45, 130, 0.19);
-    border-radius: $border-radius-10;
-  }
+    &_ctn {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(49, 45, 130, 0.19);
+        border-radius: $border-radius-10;
+    }
 
-  &_icon {
-    font-size: 20px;
-    transition: $transiton;
-  }
-  &:hover &_icon {
-    color: $color-main-gold;
-  }
+    &_icon {
+        font-size: 20px;
+        transition: $transition;
+    }
+    &:hover &_icon {
+        color: $color-main-gold;
+    }
 }
 @include mediaTablet {
-  .image_ctn {
-    // position: relative;
-    &_image {
-      display: none;
+    .image_ctn {
+        // position: relative;
+        &_image {
+            display: none;
+        }
     }
-  }
-  .button {
-    &_ctn {
-      background-color: transparent;
-      position: relative;
+    .button {
+        &_ctn {
+            background-color: transparent;
+            position: relative;
+        }
     }
-  }
 }
 @include mediaPhone {
-  .button {
-    width: 100%;
-    &_ctn {
-      width: 100%;
+    .button {
+        width: 100%;
+        &_ctn {
+            width: 100%;
+        }
     }
-  }
 }
