--- a/src/components/common/Popup/popup.module.scss
+++ b/src/components/common/Popup/popup.module.scss
@@ -1,82 +1,82 @@
 @import "/src/asset/common-styles/";
 .popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  opacity: 0;
-  z-index: 1000;
-  transition: $transiton;
-  pointer-events: none;
-  cursor: default;
-  &_container {
-    z-index: 10;
-    width: 100%;
-    height: 90%;
-    background-color: $color-main-white;
-    border-radius: 20px 20px 0 0;
-    transform: translate(0, 100%);
-    transition: $transiton;
-    padding-top: 50px;
-  }
-  &_container__small {
-    height: fit-content;
-    padding-top: 10px;
-  }
-  &_content {
-    height: 100%;
     display: flex;
     flex-direction: column;
-    &_top {
-      & h2 {
-        color: $color-main-black;
-      }
-      @extend %display-between;
-      gap: $gap;
-      margin-bottom: 20px;
+    justify-content: flex-end;
+    opacity: 0;
+    z-index: 1000;
+    transition: $transition;
+    pointer-events: none;
+    cursor: default;
+    &_container {
+        z-index: 10;
+        width: 100%;
+        height: 90%;
+        background-color: $color-main-white;
+        border-radius: 20px 20px 0 0;
+        transform: translate(0, 100%);
+        transition: $transition;
+        padding-top: 50px;
     }
-  }
-  // &_title {
-  // }
-  // &_close {
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  //   padding: 15px;
-  //   border-radius: 50%;
-  //   background-color: $color-main-background;
-  //   cursor: pointer;
-  //   transition: $transiton;
-  //   border: 1px solid transparent;
-  //   &:hover {
-  //     border-color: $color-main-gold;
-  //   }
-  //   // &_icon {
-  //   // }
-  // }
-  &_active {
-    opacity: 1;
-    pointer-events: all;
-  }
-  &_active &_container {
-    transform: translate(0, 0);
-  }
+    &_container__small {
+        height: fit-content;
+        padding-top: 10px;
+    }
+    &_content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        &_top {
+            & h2 {
+                color: $color-main-black;
+            }
+            @extend %display-between;
+            gap: $gap;
+            margin-bottom: 20px;
+        }
+    }
+    // &_title {
+    // }
+    // &_close {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   padding: 15px;
+    //   border-radius: 50%;
+    //   background-color: $color-main-background;
+    //   cursor: pointer;
+    //   transition: $transition;
+    //   border: 1px solid transparent;
+    //   &:hover {
+    //     border-color: $color-main-gold;
+    //   }
+    //   // &_icon {
+    //   // }
+    // }
+    &_active {
+        opacity: 1;
+        pointer-events: all;
+    }
+    &_active &_container {
+        transform: translate(0, 0);
+    }
 }
 .content {
-  padding-bottom: 20px;
-  display: block;
-  max-height: 100%;
-  overflow: auto;
+    padding-bottom: 20px;
+    display: block;
+    max-height: 100%;
+    overflow: auto;
 
-  & img {
-    float: left;
-    padding: 20px;
-  }
+    & img {
+        float: left;
+        padding: 20px;
+    }
 }
 // .popup {
 //   &_double {
