--- a/src/components/common/Slider/slider.module.scss
+++ b/src/components/common/Slider/slider.module.scss
@@ -1,81 +1,81 @@
 .slider_ctn {
-  position: relative;
-  max-height: 100%;
+    position: relative;
+    max-height: 100%;
 }
 .arrow_next,
 .arrow_prev {
-  user-select: none;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 50%;
-  position: absolute;
-  top: 35%;
-  z-index: 2;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 50%;
+    position: absolute;
+    top: 35%;
+    z-index: 2;
 
-  padding: 0;
-  background-color: $color-main-white;
-  cursor: pointer;
-  transition: $transiton;
-  &:hover {
-    background-color: $color-main-blue;
-  }
-  &:active {
-    background-color: $color-main-blue;
-    // border-color: $color-main-blue;
-  }
-  &_icon {
-    color: $color-main-black;
-    transition: $transiton;
-    font-size: 30px;
-  }
-  &:hover &_icon {
-    color: $color-main-white;
-  }
-  &:active &_icon {
-    color: $color-main-white;
-  }
+    padding: 0;
+    background-color: $color-main-white;
+    cursor: pointer;
+    transition: $transition;
+    &:hover {
+        background-color: $color-main-blue;
+    }
+    &:active {
+        background-color: $color-main-blue;
+        // border-color: $color-main-blue;
+    }
+    &_icon {
+        color: $color-main-black;
+        transition: $transition;
+        font-size: 30px;
+    }
+    &:hover &_icon {
+        color: $color-main-white;
+    }
+    &:active &_icon {
+        color: $color-main-white;
+    }
 }
 .arrow_prev {
-  left: -10px;
+    left: -10px;
 }
 .arrow_next {
-  right: -10px;
+    right: -10px;
 }
 
 .disable_arrow {
-  display: none;
-  color: $color-main-grey;
-  border-color: $color-main-grey;
-  &:hover {
+    display: none;
+    color: $color-main-grey;
     border-color: $color-main-grey;
-  }
-  &:active {
-    border-color: $color-main-grey;
-  }
+    &:hover {
+        border-color: $color-main-grey;
+    }
+    &:active {
+        border-color: $color-main-grey;
+    }
 }
 
 .skeleton {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-  &_slide {
-    min-height: 320px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 8px;
-  }
-  &_image {
-    width: 100%;
-    height: 300px;
-  }
-  &_button {
-    width: 100%;
-  }
+    &_slide {
+        min-height: 320px;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+    &_image {
+        width: 100%;
+        height: 300px;
+    }
+    &_button {
+        width: 100%;
+    }
 }
 @include mediaNetbook {
-  .arrow_prev,
-  .arrow_next {
-    display: none;
-  }
+    .arrow_prev,
+    .arrow_next {
+        display: none;
+    }
 }
