--- a/src/screens/(News)/NewsScreen/_components/BlockNews/blockNews.module.scss
+++ b/src/screens/(News)/NewsScreen/_components/BlockNews/blockNews.module.scss
@@ -7,7 +7,6 @@ $marginNews: 40px;
     margin-bottom: 70px;
 }
 
-
 .breadcrumb {
     margin-bottom: 20px;
 }
@@ -32,7 +31,7 @@ $marginNews: 40px;
     &_author {
         & a {
             color: $color-main-blue;
-            transition: $transiton;
+            transition: $transition;
             &:hover {
                 color: $color-main-gold;
             }
@@ -86,7 +85,7 @@ $marginNews: 40px;
             border-radius: $border-radius-5;
             cursor: pointer;
             background: $color-main-background;
-            transition: $transiton;
+            transition: $transition;
             &:hover {
                 border-color: $color-main-gold;
                 border-radius: $border-radius-10;
