--- a/src/screens/(Profile)/_component/Tabs/TabPublication/tabPublication.module.scss
+++ b/src/screens/(Profile)/_component/Tabs/TabPublication/tabPublication.module.scss
@@ -1,72 +1,72 @@
 .publication_content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: $gap-big;
-  .cardArticle {
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: repeat(3, 1fr);
     gap: $gap-big;
-    background-color: $color-additional-background;
-    border-radius: $border-radius-10;
-    overflow: hidden;
-    &_image {
-      display: flex;
-      width: 100%;
-      position: relative;
-      overflow: hidden;
-      &_img {
-        aspect-ratio: 16 / 9;
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        transition: $transiton;
-      }
+    .cardArticle {
+        display: grid;
+        grid-template-rows: auto 1fr;
+        gap: $gap-big;
+        background-color: $color-additional-background;
+        border-radius: $border-radius-10;
+        overflow: hidden;
+        &_image {
+            display: flex;
+            width: 100%;
+            position: relative;
+            overflow: hidden;
+            &_img {
+                aspect-ratio: 16 / 9;
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                transition: $transition;
+            }
+        }
+        &:hover .cardRecommend_image_img {
+            transform: scale(1.02);
+        }
+        &_content {
+            height: 100%;
+            padding: 24px 16px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: $gap-big;
+            &_title {
+                height: fit-content;
+                @extend %Text18;
+                @include textCut(3);
+            }
+            &_additional {
+                display: flex;
+                justify-content: space-between;
+                gap: $gap-small;
+                @extend %Text12;
+                color: $color-main-grey;
+            }
+            &_date {
+            }
+        }
     }
-    &:hover .cardRecommend_image_img {
-      transform: scale(1.02);
-    }
-    &_content {
-      height: 100%;
-      padding: 24px 16px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      gap: $gap-big;
-      &_title {
-        height: fit-content;
-        @extend %Text18;
-        @include textCut(3);
-      }
-      &_additional {
-        display: flex;
-        justify-content: space-between;
-        gap: $gap-small;
-        @extend %Text12;
-        color: $color-main-grey;
-      }
-      &_date {
-      }
-    }
-  }
 }
 .skeleton {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-  &_block {
-    min-height: 320px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-  &_input {
-    height: 100%;
     width: 100%;
-  }
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+    &_block {
+        min-height: 320px;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+    &_input {
+        height: 100%;
+        width: 100%;
+    }
 }
 @include mediaTablet {
-  .skeleton {
-    grid-template-columns: 1fr;
-  }
+    .skeleton {
+        grid-template-columns: 1fr;
+    }
 }
