--- a/src/screens/MainScreen/_components/SliderCommercial/sliderCommercial.module.scss
+++ b/src/screens/MainScreen/_components/SliderCommercial/sliderCommercial.module.scss
@@ -1,82 +1,82 @@
 .slider_ctn {
-  position: relative;
-  margin-bottom: 30px;
+    position: relative;
+    margin-bottom: 30px;
 }
 .arrow_next,
 .arrow_prev {
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 50%;
-  position: absolute;
-  top: 40%;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 50%;
+    position: absolute;
+    top: 40%;
 
-  z-index: 2;
-  //   font-size: 30px;
+    z-index: 2;
+    //   font-size: 30px;
 
-  color: $color-main-black;
-  padding: 0;
-  background-color: rgba(255, 251, 251, 0.363);
-  backdrop-filter: blur(1px);
-  cursor: pointer;
-  border: 2px solid $color-main-grey;
-  transition: $transiton;
-  &:hover {
-    border-color: $color-main-gold;
-  }
-  &:active {
-    border-color: $color-main-blue;
-  }
-  &_icon {
-    font-size: 40px;
-  }
+    color: $color-main-black;
+    padding: 0;
+    background-color: rgba(255, 251, 251, 0.363);
+    backdrop-filter: blur(1px);
+    cursor: pointer;
+    border: 2px solid $color-main-grey;
+    transition: $transition;
+    &:hover {
+        border-color: $color-main-gold;
+    }
+    &:active {
+        border-color: $color-main-blue;
+    }
+    &_icon {
+        font-size: 40px;
+    }
 }
 .arrow_prev {
-  left: -10px;
+    left: -10px;
 }
 .arrow_next {
-  right: -10px;
+    right: -10px;
 }
 .pagination {
-  // background-color: red;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  position: absolute;
-  // top: calc(100% + 20px);
-  bottom: -20px !important;
-  &_bullet {
-    width: 10px;
-    height: 10px;
-  }
+    // background-color: red;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    position: absolute;
+    // top: calc(100% + 20px);
+    bottom: -20px !important;
+    &_bullet {
+        width: 10px;
+        height: 10px;
+    }
 }
 .disable_arrow {
-  color: $color-main-grey;
-  border-color: $color-main-grey;
-  &:hover {
+    color: $color-main-grey;
     border-color: $color-main-grey;
-  }
-  &:active {
-    border-color: $color-main-grey;
-  }
+    &:hover {
+        border-color: $color-main-grey;
+    }
+    &:active {
+        border-color: $color-main-grey;
+    }
 }
 
 .skeleton {
-  display: flex;
-  // grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-  &_slide {
-    min-height: 320px;
-    width: 100%;
     display: flex;
-    flex-direction: column;
+    // grid-template-columns: repeat(3, 1fr);
     gap: 8px;
-  }
-  &_image {
-    width: 100%;
-    height: 300px;
-  }
-  &_button {
-    width: 100%;
-  }
+    &_slide {
+        min-height: 320px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+    &_image {
+        width: 100%;
+        height: 300px;
+    }
+    &_button {
+        width: 100%;
+    }
 }
