--- a/src/screens/MainScreen/mainScreen.module.scss
+++ b/src/screens/MainScreen/mainScreen.module.scss
@@ -1,298 +1,298 @@
 .commercial {
-  position: relative;
-  //   border-radius: $border-radius-20;
-  // overflow: hidden;
+    position: relative;
+    //   border-radius: $border-radius-20;
+    // overflow: hidden;
 
-  & img {
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    max-height: 300px;
-  }
+    & img {
+        width: 100%;
+        height: 100%;
+        min-height: 100%;
+        max-height: 300px;
+    }
 }
 .title_second {
-  & a {
-    position: relative;
-    @include underline($color-main-blue_hover);
-    transition: $transiton;
-  }
-  & a:hover {
-    color: $color-main-blue_hover;
-  }
-  margin-bottom: 20px;
+    & a {
+        position: relative;
+        @include underline($color-main-blue_hover);
+        transition: $transition;
+    }
+    & a:hover {
+        color: $color-main-blue_hover;
+    }
+    margin-bottom: 20px;
 }
 .news_content {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: $gap-big;
-  .cardNews {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: repeat(4, 1fr);
     gap: $gap-big;
-    background-color: $color-additional-background;
-    border-radius: $border-radius-10;
-    overflow: hidden;
-
-    &_image {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      overflow: hidden;
-      &_img {
-        aspect-ratio: 16 / 9;
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        transition: $transiton;
-      }
-    }
-    &:hover .cardNews_image_img {
-      transform: scale(1.02);
-    }
-    &_content {
-      height: 100%;
-      padding: 24px 16px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      gap: $gap-medium;
-
-      &_title {
-        height: fit-content;
-        @extend %Text18;
-        @include textCut(3);
-      }
-      &_additional {
-        display: flex;
-        justify-content: space-between;
-        gap: $gap-small;
-        @extend %Text12;
-        color: $color-main-grey;
-      }
-      &_date {
-      }
-    }
-  }
-  .cardNews:first-child {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column: 1/4;
-    .cardNews_content {
-      justify-content: center;
-      gap: $gap-big;
-    }
-    .cardNews_image_img {
-      height: 100%;
-    }
-  }
-}
-.recommend_content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: $gap-big;
-  .cardRecommend {
-    display: grid;
-    grid-template-rows: auto 1fr;
-    gap: $gap-big;
-    background-color: $color-additional-background;
-    border-radius: $border-radius-10;
-    overflow: hidden;
-    &_image {
-      display: flex;
-      width: 100%;
-      position: relative;
-      overflow: hidden;
-      &_img {
-        aspect-ratio: 16 / 9;
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        transition: $transiton;
-      }
-    }
-    &:hover .cardRecommend_image_img {
-      transform: scale(1.02);
-    }
-    &_content {
-      height: 100%;
-      padding: 24px 16px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      gap: $gap-big;
-      &_title {
-        height: fit-content;
-        @extend %Text18;
-        @include textCut(3);
-      }
-      &_additional {
-        display: flex;
-        justify-content: space-between;
-        gap: $gap-small;
-        @extend %Text12;
-        color: $color-main-grey;
-      }
-      &_date {
-      }
-    }
-  }
-}
-.direction_content {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: $gap-medium;
-  .cardDirection {
-    &:nth-child(-n + 2) {
-      grid-column: span 3;
-    }
-    width: 100%;
-    grid-column: span 2;
-    position: relative;
-    &_image {
-      width: 100%;
-      display: flex;
-      &_img {
-        width: 100%;
-        height: 100%;
-        aspect-ratio: 16 / 9;
-        border-radius: $border-radius-20;
-      }
-    }
-    &_content {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      background-color: $color-overlay;
-      border-radius: $border-radius-20;
-      transition: $transiton;
-      &:hover {
-        background-color: transparent;
-      }
-
-      &_title {
-        margin: 20px 10px;
-        border-radius: $border-radius-10;
-        color: $color-main-white;
-        text-shadow: 1px 1px 1px $color-main-black;
-        font-weight: 700;
-        width: fit-content;
-      }
-    }
-  }
-}
-@include mediaTablet {
-  .news_content {
-    display: flex;
-    flex-direction: column;
     .cardNews {
-      height: 100%;
-      grid-template-columns: 1fr 2fr;
-      grid-template-rows: 1fr;
-      gap: $gap-small;
-      &_image_img {
-        height: 100%;
-      }
-      &_content {
-        padding: 7px 5px;
-        gap: $gap-small;
-        &_date,
-        &_title {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
+        gap: $gap-big;
+        background-color: $color-additional-background;
+        border-radius: $border-radius-10;
+        overflow: hidden;
+
+        &_image {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            overflow: hidden;
+            &_img {
+                aspect-ratio: 16 / 9;
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                transition: $transition;
+            }
         }
-      }
+        &:hover .cardNews_image_img {
+            transform: scale(1.02);
+        }
+        &_content {
+            height: 100%;
+            padding: 24px 16px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: $gap-medium;
+
+            &_title {
+                height: fit-content;
+                @extend %Text18;
+                @include textCut(3);
+            }
+            &_additional {
+                display: flex;
+                justify-content: space-between;
+                gap: $gap-small;
+                @extend %Text12;
+                color: $color-main-grey;
+            }
+            &_date {
+            }
+        }
     }
     .cardNews:first-child {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      position: relative;
-      .cardNews_content {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: fit-content;
-        color: $color-main-white;
-        background-color: $color-blur-black;
-        &_additional {
-          color: $color-main-white;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+        grid-column: 1/4;
+        .cardNews_content {
+            justify-content: center;
+            gap: $gap-big;
         }
-      }
+        .cardNews_image_img {
+            height: 100%;
+        }
     }
-  }
-  .recommend_content {
-    display: flex;
-    flex-direction: column;
+}
+.recommend_content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: $gap-big;
     .cardRecommend {
-      grid-template-columns: 1fr 2fr;
-      grid-template-rows: 1fr;
-      gap: $gap-small;
-      &_content {
-        padding: 7px 5px;
-        gap: $gap-small;
-      }
-    }
-    .cardRecommend:first-child {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      position: relative;
-      .cardRecommend_content {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: fit-content;
-        color: $color-main-white;
-        background-color: $color-blur-black;
-        &_additional {
-          color: $color-main-white;
+        display: grid;
+        grid-template-rows: auto 1fr;
+        gap: $gap-big;
+        background-color: $color-additional-background;
+        border-radius: $border-radius-10;
+        overflow: hidden;
+        &_image {
+            display: flex;
+            width: 100%;
+            position: relative;
+            overflow: hidden;
+            &_img {
+                aspect-ratio: 16 / 9;
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                transition: $transition;
+            }
         }
-      }
+        &:hover .cardRecommend_image_img {
+            transform: scale(1.02);
+        }
+        &_content {
+            height: 100%;
+            padding: 24px 16px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: $gap-big;
+            &_title {
+                height: fit-content;
+                @extend %Text18;
+                @include textCut(3);
+            }
+            &_additional {
+                display: flex;
+                justify-content: space-between;
+                gap: $gap-small;
+                @extend %Text12;
+                color: $color-main-grey;
+            }
+            &_date {
+            }
+        }
     }
-  }
-  .direction_content {
-    grid-template-columns: repeat(2, 1fr);
-
+}
+.direction_content {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: $gap-medium;
     .cardDirection {
-      grid-column: span 1;
-      &:nth-child(2) {
-        grid-column: span 1;
-      }
-      &:first-child {
+        &:nth-child(-n + 2) {
+            grid-column: span 3;
+        }
+        width: 100%;
         grid-column: span 2;
-      }
-      width: 100%;
-      &_content_title {
-        // font-size: 18px;
-      }
+        position: relative;
+        &_image {
+            width: 100%;
+            display: flex;
+            &_img {
+                width: 100%;
+                height: 100%;
+                aspect-ratio: 16 / 9;
+                border-radius: $border-radius-20;
+            }
+        }
+        &_content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background-color: $color-overlay;
+            border-radius: $border-radius-20;
+            transition: $transition;
+            &:hover {
+                background-color: transparent;
+            }
+
+            &_title {
+                margin: 20px 10px;
+                border-radius: $border-radius-10;
+                color: $color-main-white;
+                text-shadow: 1px 1px 1px $color-main-black;
+                font-weight: 700;
+                width: fit-content;
+            }
+        }
     }
-  }
+}
+@include mediaTablet {
+    .news_content {
+        display: flex;
+        flex-direction: column;
+        .cardNews {
+            height: 100%;
+            grid-template-columns: 1fr 2fr;
+            grid-template-rows: 1fr;
+            gap: $gap-small;
+            &_image_img {
+                height: 100%;
+            }
+            &_content {
+                padding: 7px 5px;
+                gap: $gap-small;
+                &_date,
+                &_title {
+                }
+            }
+        }
+        .cardNews:first-child {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            position: relative;
+            .cardNews_content {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                height: fit-content;
+                color: $color-main-white;
+                background-color: $color-blur-black;
+                &_additional {
+                    color: $color-main-white;
+                }
+            }
+        }
+    }
+    .recommend_content {
+        display: flex;
+        flex-direction: column;
+        .cardRecommend {
+            grid-template-columns: 1fr 2fr;
+            grid-template-rows: 1fr;
+            gap: $gap-small;
+            &_content {
+                padding: 7px 5px;
+                gap: $gap-small;
+            }
+        }
+        .cardRecommend:first-child {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            position: relative;
+            .cardRecommend_content {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                height: fit-content;
+                color: $color-main-white;
+                background-color: $color-blur-black;
+                &_additional {
+                    color: $color-main-white;
+                }
+            }
+        }
+    }
+    .direction_content {
+        grid-template-columns: repeat(2, 1fr);
+
+        .cardDirection {
+            grid-column: span 1;
+            &:nth-child(2) {
+                grid-column: span 1;
+            }
+            &:first-child {
+                grid-column: span 2;
+            }
+            width: 100%;
+            &_content_title {
+                // font-size: 18px;
+            }
+        }
+    }
 }
 @include mediaPhone {
-  .news_content {
-    .cardNews {
-      // grid-template-columns: auto 1fr;
-      // grid-template-rows: 1fr;
-      // gap: $gap-small;
-      &_content {
-        &_title,
-        &_date {
-          font-size: 12px;
-          line-height: 1.2em;
+    .news_content {
+        .cardNews {
+            // grid-template-columns: auto 1fr;
+            // grid-template-rows: 1fr;
+            // gap: $gap-small;
+            &_content {
+                &_title,
+                &_date {
+                    font-size: 12px;
+                    line-height: 1.2em;
+                }
+            }
         }
-      }
     }
-  }
-  .recommend_content {
-    .cardRecommend {
-      &_content {
-        &_title,
-        &_date {
-          font-size: 12px;
-          line-height: 1.2em;
+    .recommend_content {
+        .cardRecommend {
+            &_content {
+                &_title,
+                &_date {
+                    font-size: 12px;
+                    line-height: 1.2em;
+                }
+            }
         }
-      }
     }
-  }
 }
